Initial script for updating list isPrivate flag via graphql

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,6 +38,7 @@
 				  "**/.pytest_cache": true
 				},
 				"files.autoSave": "onFocusChange",
+				"files.eol": "\n",
 				"git.autorefresh": true,
 				"extensions.ignoreRecommendations": true,        
 				"python.analysis.diagnosticMode": "workspace",
