--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ psycopg-binary~=3.1.10
 s3fs~=2024.10.0
 ruff~=0.8.6
 scikit-learn~=1.6.0
-argparse-1.4.0
+argparse==1.4.0
 certifi==2024.7.4
 Markdown==3.4.1
 redmail==0.6.0
