Latest isPrivate flag code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,10 @@
         "console": "integratedTerminal",
         "args": ["--input", "data",
                         "--output", "data",
-                        "--infile", "data/auth-notprivate-lists.csv",
-                        "--outfile", "data/lists-to-update.csv",
+                        "--allfile", "data/test.all-nonauth-nonpriv-lists.csv",
+                        "--updfile", "data/lists.test-to-update.csv",
+                        "--colfile", "data/lists.test-collectory-metadata.csv",
+                        "--list_metafile", "data/lists.test-list-metadata.csv",
                         "--env", "test",
                         "--getListInfo", "False",
                         "--client_ids", "data/clientId.txt",
